clusters/cluster/apps/neuland-app/neuland-next-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuland-next-docs
  namespace: neuland-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: neuland-next-docs
  template:
    metadata:
      labels:
        app: neuland-next-docs
    spec:
      containers:
        - name: neuland-next-docs
          image: ghcr.io/neuland-ingolstadt/neuland.app-docs:build-54 # {"$imagepolicy": "flux-system:neuland-next-docs"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
