clusters/cluster/apps/neuland-app/neuland-next-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuland-next-docs
  namespace: neuland-app
spec:
  type: ClusterIP
  selector:
    app: neuland-next-docs
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
